--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
 affine==2.4.0
+altair==5.2.0
+appnope==0.1.4
 asttokens==2.4.1
 attrs==23.2.0
 bleach==6.1.0
+blinker==1.7.0
 bokeh==3.3.4
+branca==0.7.1
+cachetools==5.3.3
 Cartopy==0.22.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
@@ -14,6 +19,7 @@ colorcet==3.0.1
 comm==0.2.1
 contextily==1.5.1
 contourpy==1.2.0
+cramjam==2.8.2
 cycler==0.12.1
 dask==2024.2.1
 dask-expr==0.5.3
@@ -21,13 +27,20 @@ debugpy==1.8.1
 decorator==5.1.1
 distributed==2024.2.1
 executing==2.0.1
+fastjsonschema==2.19.1
+fastparquet==2024.2.0
 fiona==1.9.5
+folium==0.16.0
 fonttools==4.49.0
 fsspec==2024.2.0
 geographiclib==2.0
 geopandas==0.14.3
 geopy==2.4.1
 geoviews==1.11.1
+gitdb==4.0.11
+GitPython==3.1.42
+gtfs_kit==6.1.0
+h3==3.7.7
 holoviews==1.18.3
 hvplot==0.9.2
 idna==3.6
@@ -37,12 +50,16 @@ ipython==8.21.0
 jedi==0.19.1
 Jinja2==3.1.3
 joblib==1.3.2
+json2html==1.3.0
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
 jupyter_client==8.6.0
 jupyter_core==5.7.1
 kiwisolver==1.4.5
 linkify-it-py==2.0.3
 locket==1.0.0
 lz4==4.3.3
+mapclassify==2.6.1
 Markdown==3.5.2
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
@@ -53,7 +70,9 @@ mdurl==0.1.2
 mercantile==1.2.1
 movingpandas==0.17.2
 msgpack==1.0.7
+nbformat==5.10.4
 nest-asyncio==1.6.0
+networkx==3.2.1
 numpy==1.26.4
 packaging==23.2
 pandas==2.2.0
@@ -64,13 +83,17 @@ partd==1.4.1
 pexpect==4.9.0
 pillow==10.2.0
 platformdirs==4.2.0
+plotly==5.19.0
 prompt-toolkit==3.0.43
+protobuf==4.25.3
 psutil==5.9.8
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pyarrow==15.0.0
 pyarrow-hotfix==0.6
+pycountry==23.12.11
 pyct==0.5.0
+pydeck==0.8.1b0
 Pygments==2.17.2
 pyparsing==3.1.1
 pyproj==3.6.1
@@ -81,14 +104,26 @@ pyviz_comms==3.0.1
 PyYAML==6.0.1
 pyzmq==25.1.2
 rasterio==1.3.9
+referencing==0.33.0
 requests==2.31.0
+rich==13.7.1
+rpds-py==0.18.0
 Rtree==1.2.0
+scikit-learn==1.4.1.post1
+scipy==1.12.0
+seaborn==0.13.2
 shapely==2.0.3
 six==1.16.0
+smmap==5.0.1
 snuggs==1.4.7
 sortedcontainers==2.4.0
 stack-data==0.6.3
+streamlit==1.32.0
+streamlit-folium==0.18.0
 tblib==3.0.0
+tenacity==8.2.3
+threadpoolctl==3.4.0
+toml==0.10.2
 toolz==0.12.1
 tornado==6.4
 tqdm==4.66.2
@@ -97,10 +132,9 @@ typing_extensions==4.9.0
 tzdata==2024.1
 uc-micro-py==1.0.3
 urllib3==2.2.1
+utm==0.7.0
 wcwidth==0.2.13
 webencodings==0.5.1
 xyzservices==2023.10.1
 zict==3.0.0
 zipp==3.17.0
-plotly
-fastparquet
